fixing add-another spacing

--- a/assets/_styles/core/forms.scss
+++ b/assets/_styles/core/forms.scss
@@ -95,6 +95,9 @@ fieldset {
     width: 47.5%;
     margin-right: 2.5%;
   }
+  .add-another & {
+    margin-bottom: 0;
+  }
   h3 {
     margin-bottom: 0.5em;
   }
